Add exampe application

--- a/ansi-terminal.cabal
+++ b/ansi-terminal.cabal
@@ -16,6 +16,10 @@ Flag SplitBase
         Description:    Choose the new smaller, split-up base package
         Default:        True
 
+Flag Example
+        Description:    Build the example application
+        Default:        False
+
 
 Library
         Exposed-Modules:        System.Console.ANSI
@@ -45,3 +49,33 @@ Library
                                 ForeignFunctionInterface
         
         Ghc-Options:            -Wall
+
+Executable ansi-terminal-example
+        Main-Is:                System/Console/ANSI/Example.hs
+        
+        Cpp-Options:            -Iincludes
+        
+        if os(windows)
+                Build-Depends:  Win32 >= 2.0
+                Cpp-Options:    -DWINDOWS
+                Other-Modules:  System.Console.ANSI.Windows
+                                System.Console.ANSI.Windows.Foreign
+                                System.Console.ANSI.Windows.Emulator
+        else
+                -- We assume any non-Windows platform is Unix
+                Build-Depends:  unix >= 2.3.0.0
+                Cpp-Options:    -DUNIX
+                Other-Modules:  System.Console.ANSI.Unix
+        
+        if flag(splitBase)
+                Build-Depends:  base >= 3
+        else
+                Build-Depends:  base < 3
+        
+        Extensions:             CPP
+                                ForeignFunctionInterface
+        
+        Ghc-Options:            -Wall
+        
+        if !flag(example)
+                Buildable:      False
