--- a/ansi-terminal.cabal
+++ b/ansi-terminal.cabal
@@ -3,7 +3,7 @@ Version:        0.1
 Cabal-Version:  >= 1.2
 Category:       User Interfaces
 Synopsis:       Simple ANSI terminal support, with Windows compatibility
-Description:    ANSI terminal support for Haskell: allows cursor movement, screen clearing, color output and showing or hiding the cursor
+Description:    ANSI terminal support for Haskell: allows cursor movement, screen clearing, color output and showing or hiding the cursor. Compatible with Windows and Unixes with ANSI terminals.
 License:        BSD3
 License-File:   LICENSE
 Author:         Max Bolingbroke
