--- a/ansi-terminal.cabal
+++ b/ansi-terminal.cabal
@@ -1,15 +1,16 @@
-Name:           ansi-terminal
-Version:        0.2.1
-Cabal-Version:  >= 1.2
-Category:       User Interfaces
-Synopsis:       Simple ANSI terminal support, with Windows compatibility
-Description:    ANSI terminal support for Haskell: allows cursor movement, screen clearing, color output and showing or hiding the cursor. Compatible with Windows and those Unixes with ANSI terminals.
-License:        BSD3
-License-File:   LICENSE
-Author:         Max Bolingbroke
-Maintainer:     batterseapower@hotmail.com
-Homepage:       http://wiki.omega-prime.co.uk/doku.php/projects/haskell/ansi-terminal
-Build-Type:     Simple
+Name:                ansi-terminal
+Version:             0.2.1
+Cabal-Version:       >= 1.2
+Category:            User Interfaces
+Synopsis:            Simple ANSI terminal support, with Windows compatibility
+Description:         ANSI terminal support for Haskell: allows cursor movement, screen clearing, color output and showing or hiding the cursor. Compatible with Windows and those Unixes with ANSI terminals.
+License:             BSD3
+License-File:        LICENSE
+Extra-Source-Files:  README.textile
+Author:              Max Bolingbroke
+Maintainer:          batterseapower@hotmail.com
+Homepage:            http://github.com/batterseapower/ansi-terminal
+Build-Type:          Simple
 
 Extra-Source-Files:     includes/Common-Include.hs
                         includes/Exports-Include.hs
