export "empty_image" from Graphics.Vty.Picture
Ignore-this: 75203e75c39528fd287dc8e49ee8a361
thanks allan.clark@gmail.com

darcs-hash:20090906024209-f0a0d-df85e22d4bfc215993d148c02750e306ab986098.gz

--- a/test/Makefile
+++ b/test/Makefile
@@ -4,6 +4,7 @@ verify_control_strings \
 verify_utf8_width \
 verify_image_ops \
 verify_image_trans \
+verify_empty_image_props \
 verify_picture_ops \
 verify_span_ops \
 verify_debug_terminal
