--- a/vty.cabal
+++ b/vty.cabal
@@ -26,10 +26,11 @@ Description:
 Build-Depends:       base >= 4 && < 5, bytestring, containers, unix, uvector
 Build-Depends:       terminfo >= 0.2 && < 0.3
 Build-Depends:       utf8-string >= 0.3 && < 0.4
-Build-Depends:       transformers, monads-tf
+Build-Depends:       mtl >= 1.1.0.0 && < 1.2
 Build-Depends:       ghc-prim
 Build-Depends:       array
-Build-Depends:       parsec >= 3 && < 4
+Build-Depends:       parsec >= 2 && < 4
+Build-Depends:       vector-space >= 0.5 && < 0.6
 Build-Type:          Simple
 Data-Files:          README, TODO
 Exposed-Modules:     Graphics.Vty
