start of implementing put_attr_change
Ignore-this: 9c764d734d84fa2fa9146d87d2ae4f9d

darcs-hash:20091108234349-f0a0d-d9e25c48aafc6ee7a93cf13b2ab2c3f9f7892d83.gz

--- a/vty.cabal
+++ b/vty.cabal
@@ -37,6 +37,7 @@ Exposed-Modules:     Graphics.Vty
                      Graphics.Vty.Terminal
                      Graphics.Vty.LLInput
                      Graphics.Vty.Attributes
+                     Graphics.Vty.AttributeChange
                      Graphics.Vty.Picture
                      Graphics.Vty.DisplayRegion
 
