Moved all IO actions to MonadIO
Ignore-this: 69cf0259898de9ab296861ab26630460

darcs-hash:20091109053436-f0a0d-0e2ae084dd91d09216d494a2aa84958ac71ef2f7.gz

--- a/test/Makefile
+++ b/test/Makefile
@@ -2,6 +2,7 @@ VERIF_TESTS := \
 verify_attribute_ops \
 verify_display_attributes \
 verify_parse_terminfo_caps \
+verify_eval_terminfo_caps \
 verify_utf8_width \
 verify_image_ops \
 verify_image_trans \
@@ -38,7 +39,7 @@ $(TESTS) :
 	@echo running test $@
 	@mkdir -p results/$@
 	( ghc $(GHC_PROF_ARGS) $@ \
-	&& time --output results/$@/time_report ./$@ +RTS -p -sresults/$@/mem_report \
+	&& time ./$@ +RTS -p -sresults/$@/mem_report \
 	&& cp $@.prof results/$@/profile \
 	)
 
