--- a/vty.cabal
+++ b/vty.cabal
@@ -37,7 +37,7 @@ Exposed-Modules:     Graphics.Vty
                      Graphics.Vty.Terminal
                      Graphics.Vty.LLInput
                      Graphics.Vty.Attributes
-                     Graphics.Vty.AttributeChange
+                     Graphics.Vty.Inline
                      Graphics.Vty.Picture
                      Graphics.Vty.DisplayRegion
 
@@ -45,6 +45,7 @@ other-modules:       Codec.Binary.UTF8.Width
                      Data.Marshalling
                      Data.Terminfo.Parse
                      Data.Terminfo.Eval
+                     Graphics.Vty.DisplayAttributes
                      Graphics.Vty.Image
                      Graphics.Vty.Span
                      Graphics.Vty.Terminal.Generic
