--- a/vty.cabal
+++ b/vty.cabal
@@ -27,7 +27,7 @@ Build-Depends:       base >= 4 && < 5, bytestring, containers, unix, uvector
 Build-Depends:       terminfo >= 0.2 && < 0.3
 Build-Depends:       utf8-string >= 0.3 && < 0.4
 Build-Depends:       mtl >= 1.1.0.0 && < 1.2
-Build-Depends:       ghc-prim, parallel
+Build-Depends:       ghc-prim, parallel < 2
 Build-Depends:       array
 Build-Depends:       parsec >= 2 && < 4
 Build-Depends:       vector-space >= 0.5 && < 0.6
