adjust compiler optimization options
Ignore-this: c8f0131117c6c6b5b39892a3967eeceb

darcs-hash:20100114051647-f0a0d-bcd3148f3e59c7b321043a2539c0a21090f6b466.gz

--- a/vty.cabal
+++ b/vty.cabal
@@ -97,6 +97,6 @@ Extra-Source-Files: test/Makefile
                     cbits/set_term_timing.c
                     cbits/gwinsz.h
 
-ghc-options:         -funbox-strict-fields -Wall -fno-full-laziness -fspec-constr
-ghc-prof-options:    -funbox-strict-fields -caf-all -Wall -fno-full-laziness -fspec-constr
+ghc-options:         -O2 -funbox-strict-fields -Wall -fno-full-laziness -fspec-constr
+ghc-prof-options:    -O2 -funbox-strict-fields -caf-all -Wall -fno-full-laziness -fspec-constr
 
