OK, I made some mistakes with my previous Windows fix

--- a/ansi-terminal.cabal
+++ b/ansi-terminal.cabal
@@ -1,5 +1,5 @@
 Name:                ansi-terminal
-Version:             0.5.1
+Version:             0.5.2
 Cabal-Version:       >= 1.2
 Category:            User Interfaces
 Synopsis:            Simple ANSI terminal support, with Windows compatibility
@@ -73,7 +73,7 @@ Executable ansi-terminal-example
                 Other-Modules:          System.Console.ANSI.Unix
         
         if flag(splitBase)
-                Build-Depends:          base >= 3
+                Build-Depends:          base >= 3 && < 5
         else
                 Build-Depends:          base < 3
         
