--- a/vty.cabal
+++ b/vty.cabal
@@ -64,33 +64,37 @@ C-Sources:           cbits/gwinsz.c
 Include-Dirs:        cbits
 hs-source-dirs:      src
 Extra-Source-Files: test/Makefile
-                    test/Bench2.hs
                     test/Bench.hs
+                    test/Bench2.hs
                     test/BenchRenderChar.hs
                     test/ControlTable.hs
                     test/HereDoc.hs
-                    test/interactive_terminal_test.hs
-                    test/Test2.hs
                     test/Test.hs
+                    test/Test2.hs
+                    test/Verify.hs
+                    test/Verify/Data/Terminfo/Parse.hs
+                    test/Verify/Graphics/Vty/Attributes.hs
+                    test/Verify/Graphics/Vty/DisplayRegion.hs
+                    test/Verify/Graphics/Vty/Image.hs
+                    test/Verify/Graphics/Vty/Picture.hs
+                    test/Verify/Graphics/Vty/Span.hs
+                    test/interactive_terminal_test.hs
                     test/verify_attribute_ops.hs
                     test/verify_debug_terminal.hs
+                    test/verify_display_attributes.hs
+                    test/verify_empty_image_props.hs
                     test/verify_eval_terminfo_caps.hs
-                    test/Verify.hs
                     test/verify_image_ops.hs
                     test/verify_image_trans.hs
+                    test/verify_inline.hs
                     test/verify_parse_terminfo_caps.hs
                     test/verify_picture_ops.hs
                     test/verify_picture_to_span.hs
                     test/verify_span_ops.hs
                     test/verify_utf8_width.hs
+                    test/vty_inline_example.hs
                     test/vty_issue_18.hs
                     test/yi_issue_264.hs
-                    test/Verify/Graphics/Vty/Attributes.hs
-                    test/Verify/Graphics/Vty/Picture.hs
-                    test/Verify/Graphics/Vty/Span.hs
-                    test/Verify/Graphics/Vty/DisplayRegion.hs
-                    test/Verify/Graphics/Vty/Image.hs
-                    test/Verify/Data/Terminfo/Parse.hs
                     src/Codec/Binary/UTF8/Debug.hs
                     src/Graphics/Vty/Terminal/Debug.hs
                     src/Graphics/Vty/Debug.hs
