It is not necessary to link to msvcrt to link in get_osfhandle, and avoiding linking it apparently solves issues with hsc2hs (thanks Peter Rockai)

--- a/ansi-terminal.cabal
+++ b/ansi-terminal.cabal
@@ -34,7 +34,7 @@ Library
         if os(windows)
                 Build-Depends:          Win32 >= 2.0
                 Cpp-Options:            -DWINDOWS
-                Extra-Libraries:        "kernel32", "msvcrt"
+                Extra-Libraries:        "kernel32"
                 Other-Modules:          System.Console.ANSI.Windows
                                         System.Console.ANSI.Windows.Foreign
                                         System.Console.ANSI.Windows.Emulator
@@ -64,7 +64,7 @@ Executable ansi-terminal-example
         if os(windows)
                 Build-Depends:          Win32 >= 2.0
                 Cpp-Options:            -DWINDOWS
-                Extra-Libraries:        "kernel32", "msvcrt"
+                Extra-Libraries:        "kernel32"
                 Other-Modules:          System.Console.ANSI.Windows
                                         System.Console.ANSI.Windows.Foreign
                                         System.Console.ANSI.Windows.Emulator
